day3/07_ingress/nginx.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      name: myapp-pod
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp-container
        image: ewoutp/docker-nginx-curl
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
spec:
  selector:
    app: myapp
  ports:
  - protocol: TCP
    port: 80
