day3/07_ingress/traefik.nginx.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik
  namespace: ingress-internal
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - host: user1sages.westeurope.cloudapp.azure.com
    http:
      paths:
      - pathType: Prefix
        path: "/dashboard"
        backend:
          service:
            name: traefik
            port:
              number: 8080
